# cargo-genplugin

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parser.rs
wawa/: Cargo.toml
wawa/src/: lib.rs
