[package]
name = "cargo-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"
syn = { version = "1.0.107", features = ["parsing", "full"] }
clap = { version = "4.1.6", features = ["derive"] }
